--- a/style.css
+++ b/style.css
@@ -6,40 +6,33 @@
 }
 
 .parent{
-    background: #42535f;
-    color: #888;
+    background: #293F50 ;
     font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* .header{ 
-    background: #293F50;
-} */
-
 .logo {
-  margin-left: 10%;
-    /* margin-top: 5%; */
-        /* border-top: 4px solid #648880; */
+        margin-left: 10%;
         float: left;
-        font-size: 48px;
-        font-weight: 100;
+        font-weight: 50;
         letter-spacing: .5px;
         line-height: 44px;
-        /* padding: 40px 0 22px 0; */
         border-top: 2px;
+        color: white;
+        font: 48px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .dedicate{
     color: #648880;
+    font: 36px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .date {
     margin-top: 5%;
     margin-left: 60%; 
     padding-right: 60px;
-    /* margin: 66px 0 22px 0; */
-    /* text-align: right; */
     font-size: 21px;
     color: #648880;
+    font: 21px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .nav{
@@ -48,7 +41,6 @@
 
 .li {
     list-style: none;
-   
     margin: 4%;
     padding-right: 10px;
     color: white;
@@ -58,23 +50,96 @@
     padding-left: 2%;
     display: inline;
     margin-right: 10%;
+    color: white;
+    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.p{
+    color: white;
+    font: 24px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .button{
-    border: 1px solid#fff;
-    padding: 10px 30px;
-margin-left: 40%;
+    padding: 20px 40px;
+    margin-left: 40%;
     border-radius: 5px;
-    color: #42535f;
+    color:white;
+    background: #293F50 ;
+    border: groove;
+    border-color: white;
     cursor: pointer;
     display: inline-block;
     font-weight: 400;
     letter-spacing: .5px;
-   margin-right: 70px;
-   margin-top: 3%;
+    margin-right: 70px;
+    margin-top: 3%;
+    margin-bottom: 8%;
+    font: 16px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 
     .section1{
-        text-align: center;
-        padding-top: 60px;
+    text-align: center;
+    padding-top: 60px;
     }
+
+    .homebody {
+     display: flex;
+     background: white;
+    }
+
+    .imgf{
+    border-radius: 5px;
+    display: block;
+    margin-bottom: 22px;
+    max-width: 300px;
+    margin-left: 2px;
+           }
+
+    .speakers,
+    .schedule,
+    .venue{
+    margin-left: 12%;
+    width: 15%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    .h{
+        margin-bottom: 10%;
+        color: #648880;
+    }
+
+    .hh{
+        margin-bottom: 10%;
+        color: #648880;
+        font: 21px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    .pp{
+        font: 16px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    .footer{
+    padding: 4% 10% 4% 10%;
+    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #648880;
+    }
+
+    .copy {
+        float: left;
+    }
+
+        .li2 {
+        word-spacing: 40px;
+        margin-left: 75%;  
+      }
+    
+    .link2 {
+        display: inline;
+    }
+      a{
+    color: white;
+        }
+        
+    
