modified home page

--- a/style.css
+++ b/style.css
@@ -142,4 +142,23 @@
     color: white;
         }
         
-    
+        a:link {
+            text-decoration: none;
+            color: white;
+           
+          }
+     a:visited {
+      text-decoration: none;
+       text-underline-position: none;
+      }
+          
+      a:hover {
+            text-decoration: none;
+            text-underline-position: none;
+            color: #648880;
+          }
+          
+          a:active {
+            text-decoration: none;
+            color: #648880;
+          }
