modified home page

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ li{
   line-height: 44px;
   padding: 40px 0 22px 0;
  padding-left: 17%;
+ font: 48px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 
 }
