--- a/style.css
+++ b/style.css
@@ -156,9 +156,15 @@
             text-decoration: none;
             text-underline-position: none;
             color: #648880;
-          }
+            
+              }
           
           a:active {
             text-decoration: none;
+            color:#648880;
+          }
+          .button:hover{
+            background-color: white;
             color: #648880;
           }
+         
