--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@
     background: #293f50;
    text-decoration: none;
    text-underline-position: none;
-   font-style: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   
   }
 .manu2{
   background:#cbe2c1 linear-gradient(to right, #a1d3b0, #f6f1d3);
-  font-style: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   padding: 44px 0 22px 0;
 }
 .footer{
   background: #293f50;
   height: 120px;
+ 
 }
 a:link {
   text-decoration: none;
@@ -56,14 +57,16 @@ li{
 .listbars{
   padding-left: 60%;
   position: relative;bottom: 70px;
-  font-size: 21px;
+  font-size: 20px;
   word-spacing: 20px;
+  font: 20px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .august{
   position: relative;bottom: 80px;
   padding-left: 60%;
   font-size: 25px;
   color:  #648880;
+  font: 25px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
 
@@ -73,6 +76,7 @@ li{
   margin: 0px 0px 20px;
   line-height: 44px;
   padding-left: 47.6%;
+  font: 36px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .under{
   font-size: 21px;
@@ -80,16 +84,17 @@ li{
     margin: 0px 0px 20px;
     text-align: center;
     color: #888888;
+    font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .mapp2{
   height: 250px;
   width: 600px;
   padding-left: 40%;
-  position: relative;bottom: 20px;
+  position: relative;bottom: 15px;
 }
 .chicago{
   color:  #648880;
-  font-style:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .chicago{
   padding-left: 17%;
@@ -102,23 +107,23 @@ li{
   font-size: 18px;
     line-height: 20px;
    position: relative;top: 70px;
-   font-style: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color:  #648880;
 }
 .four{
   padding-left: 17%;
   font-size: 27px;
     line-height: 44px;
-   position: relative;top: 100px;
+   position: relative;bottom:  30px;
    color:  #648880;
-   font-style: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .five{
   padding-left: 17%;
   font-size: 18.3px;
     line-height: 20px;
-   position: relative;top: 117px;
-   font-style: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+   position: relative;bottom: 20px;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color:  #648880;
 }
 .copy{
@@ -134,6 +139,7 @@ li{
   position: relative;top: 50px;
   word-spacing: 10px;
   color: white;
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 a{
   color: white;
@@ -145,7 +151,10 @@ a{
   word-spacing: 10px;
   color: white;
 }
-h1 h2 h3 h4 h5{
-  font-family: 'Lato' "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
-  
+
+.map20{
+ position: relative;bottom: 200px;
+}
+.map30{
+  position: relative;bottom: 100px;
 }
