--- a/style.css
+++ b/style.css
@@ -1,169 +1,162 @@
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-decoration: none;
+.header{
+    background: #293f50;
+   text-decoration: none;
+   text-underline-position: none;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+  }
+.manu2{
+  background:#cbe2c1 linear-gradient(to right, #a1d3b0, #f6f1d3);
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  padding: 44px 0 22px 0;
+}
+.footer{
+  background: #293f50;
+  height: 120px;
+ 
+}
+a:link {
+  text-decoration: none;
+  color: white;
+ 
+}
+a:visited {
+  text-decoration: none;
+  text-underline-position: none;
 }
 
-.parent{
-    background: #293F50 ;
-    font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+a:hover {
+  text-decoration: none;
+  text-underline-position: none;
+  color: #648880;
 }
 
-.logo {
-        margin-left: 10%;
-        float: left;
-        font-weight: 50;
-        letter-spacing: .5px;
-        line-height: 44px;
-        border-top: 2px;
-        color: white;
-        font: 48px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+a:active {
+  text-decoration: none;
+  color: #648880;
+}
+li{
+  display: inline;
+  font-size: 20px;
+}
+.conference{
+  /* padding-top: 20px; */
+  font-size: 53px;
+  border-top: 4px solid #648880;
+  color: white;
+  letter-spacing: 5px;
+  font-weight: 100px;
+  line-height: 44px;
+  padding: 40px 0 22px 0;
+ padding-left: 17%;
+ font: 48px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+}
+.listbars{
+  padding-left: 60%;
+  position: relative;bottom: 70px;
+  font-size: 20px;
+  word-spacing: 20px;
+  font: 20px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.august{
+  position: relative;bottom: 80px;
+  padding-left: 60%;
+  font-size: 25px;
+  color:  #648880;
+  font: 25px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
-.dedicate{
-    color: #648880;
-    font: 36px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+.upper{
+  color:  #648880;
+  font-size: 36px;
+  margin: 0px 0px 20px;
+  line-height: 44px;
+  padding-left: 47.6%;
+  font: 36px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
-.date {
-    margin-top: 5%;
-    margin-left: 60%; 
-    padding-right: 60px;
-    font-size: 21px;
-    color: #648880;
-    font: 21px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.nav{
-    padding-left: 57.5%;
-}
-
-.li {
-    list-style: none;
-    margin: 4%;
-    padding-right: 10px;
-    color: white;
-}
-
-.link {
-    padding-left: 2%;
-    display: inline;
-    margin-right: 10%;
-    color: white;
-    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.p{
-    color: white;
-    font: 24px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.button{
-    padding: 20px 40px;
-    margin-left: 40%;
-    border-radius: 5px;
-    color:white;
-    background: #293F50 ;
-    border: groove;
-    border-color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 400;
-    letter-spacing: .5px;
-    margin-right: 70px;
-    margin-top: 3%;
-    margin-bottom: 8%;
-    font: 16px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-
-    .section1{
+.under{
+  font-size: 21px;
+    line-height: 33px;
+    margin: 0px 0px 20px;
     text-align: center;
-    padding-top: 60px;
-    }
+    color: #888888;
+    font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.mapp2{
+  height: 250px;
+  width: 600px;
+  padding-left: 40%;
+  position: relative;bottom: 15px;
+}
+.chicago{
+  color:  #648880;
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.chicago{
+  padding-left: 17%;
+  font-size: 27px;
+    line-height: 44px;
+   position: relative;top: 58px;
+}
+.state{
+  padding-left: 17%;
+  font-size: 18px;
+    line-height: 20px;
+   position: relative;top: 70px;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   color:  #648880;
+}
+.four{
+  padding-left: 17%;
+  font-size: 27px;
+    line-height: 44px;
+   position: relative;bottom:  30px;
+   color:  #648880;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.five{
+  padding-left: 17%;
+  font-size: 18.3px;
+    line-height: 20px;
+   position: relative;bottom: 20px;
+   font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   color:  #648880;
+}
+.copy{
+  float: left;
+    font-weight: 400;
+    color:  #648880;
+    padding-left: 17%;
+    position: relative;top: 50px;
+}
+.links{
+  padding-left: 60%;
+  font-size: 20px;
+  position: relative;top: 50px;
+  word-spacing: 10px;
+  color: white;
+  font:  "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+a{
+  color: white;
+}
+.liink{
+  padding-left: 60%;
+  font-size: 20px;
+  position: relative;top: 50px;
+  word-spacing: 10px;
+  color: white;
+}
 
-    .homebody {
-     display: flex;
-     background: white;
-    }
+.map20{
+ position: relative;bottom: 200px;
+}
 
-    .imgf{
-    border-radius: 5px;
-    display: block;
-    margin-bottom: 22px;
-    max-width: 300px;
-    margin-left: 2px;
-           }
+.map30{
+  position: relative;bottom: 100px;
+}
 
-    .speakers,
-    .schedule,
-    .venue{
-    margin-left: 12%;
-    width: 15%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-
-    .h{
-        margin-bottom: 10%;
-        color: #648880;
-    }
-
-    .hh{
-        margin-bottom: 10%;
-        color: #648880;
-        font: 21px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-
-    .pp{
-        font: 16px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-
-    .footer{
-    padding: 4% 10% 4% 10%;
-    font: 14px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #648880;
-    }
-
-    .copy {
-        float: left;
-    }
-
-        .li2 {
-        word-spacing: 40px;
-        margin-left: 75%;  
-      }
-    
-    .link2 {
-        display: inline;
-    }
-      a{
-    color: white;
-        }
-        
-        a:link {
-            text-decoration: none;
-            color: white;
-           
-          }
-     a:visited {
-      text-decoration: none;
-       text-underline-position: none;
-      }
-          
-      a:hover {
-            text-decoration: none;
-            text-underline-position: none;
-            color: #648880;
-              }
-          
-          a:active {
-            text-decoration: none;
-            color:#648880;
-          }
-          .button:hover{
-            background-color: white;
-            color: #648880;
-          }
-         
